--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "app.persistence.transporter.fileSystem.temporal-path",
     "type": "java.lang.String",
     "description": "A local path for temporal files created during migration using filesystem transporter"
+  },
+  {
+    "name": "info.app.version",
+    "type": "java.lang.String",
+    "description": "Application name to be shown on the banner"
+  },
+  {
+    "name": "info.app.name",
+    "type": "java.lang.String",
+    "description": "A description for 'info.app.name'"
   }
 ]}
