added support for MSSQL to Postgres data migration

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<version>19.24.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>12.8.0.jre11</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.7.3</version>
